--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
+            "./node_modules/jquery/dist/jquery.js"]
           },
           "configurations": {
             "production": {
@@ -61,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "protal:build"
+            "browserTarget": "protal:build",
+            "proxyConfig": "src/proxy.config.json"
           },
           "configurations": {
             "production": {
