--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,5 +1,15 @@
 {
-  "/": {
+  "/index": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true
+  },
+  "/user": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true
+  },
+  "/logout": {
     "target": "http://localhost:8080",
     "secure": false,
     "changeOrigin": true
