--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
 
             ],
-            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
-            "./node_modules/jquery/dist/jquery.js"]
+            "scripts": ["./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
