--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@angular/router": "~11.0.4",
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@types/chart.js": "^2.9.29",
     "angular-bootstrap-md": "^10.1.1",
     "angular-oauth2-oidc": "^10.0.3",
     "angularx-social-login": "^3.5.4",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
