--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
               "./node_modules/animate.css/animate.css"
             ],
             "scripts": ["./node_modules/jquery/dist/jquery.js",
+              "./node_modules/popper.js/dist/popper.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/hammerjs/hammer.min.js"
