--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
