--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -4,7 +4,7 @@
     "secure": false,
     "changeOrigin": true
   },
-  "/logout": {
+  "/login": {
     "target": "http://localhost:8080",
     "secure": false,
     "changeOrigin": true
