--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
