--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -9,6 +9,11 @@
     "secure": false,
     "changeOrigin": true
   },
+  "/authenticate": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true
+  },
   "/account": {
     "target": "http://localhost:8080",
     "secure": false,
