account set up but image is not working everytime

--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -19,6 +19,11 @@
     "secure": false,
     "changeOrigin": true
   },
+  "/getLoggedInUserByUsername": {
+    "target": "http://localhost:8080",
+    "secure": false,
+    "changeOrigin": true
+  },
   "/imageUpload": {
     "target": "http://localhost:8080",
     "secure": false,
