--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
     "@angular/forms": "~11.0.4",
+    "@angular/localize": "~11.0.4",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
@@ -28,13 +29,17 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ionic-native/calendar": "^5.30.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.1",
     "@types/chart.js": "^2.9.29",
     "angular-bootstrap-md": "^10.1.1",
+    "angular-calendar": "^0.28.22",
     "angular-oauth2-oidc": "^10.0.3",
     "angularx-social-login": "^3.5.4",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.5.0",
+    "date-fns": "^2.16.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
