--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.33",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
